<resources>
    <string name="app_name">专注搜索助手</string>
    <string name="keyword_hint">请输入搜索关键词</string>
    <string name="select_app">选择目标应用</string>
    <string name="start_search">开始专注搜索</string>
    <string name="select_reminder_interval">选择提醒间隔</string>
    <string name="minutes_10">10分钟</string>
    <string name="minutes_20">20分钟</string>
    <string name="minutes_30">30分钟</string>
    <string name="focus_monitoring">专注监测中...</string>
    <string name="search_complete">搜索完成了吗？</string>
    <string name="yes_completed">是的，完成了</string>
    <string name="continue_focus">继续专注</string>
    <string name="permission_required">需要权限</string>
    <string name="grant_usage_access">请授予应用使用情况访问权限</string>
    <string name="grant_overlay_permission">请授予悬浮窗权限</string>
    <string name="grant_permission">授予权限</string>
</resources>